/*
 * Tencent is pleased to support the open source community by making Angel available.
 *
 * Copyright (C) 2017-2018 THL A29 Limited, a Tencent company. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
 * compliance with the License. You may obtain a copy of the License at
 *
 * https://opensource.org/licenses/Apache-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is
 * distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 * either express or implied. See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "com.tencent.angel.protobuf.generated";

option java_outer_classname = "PSAgentPSServiceProtos";

option java_generate_equals_and_hash = true;

option java_generic_services = true;

option optimize_for = SPEED;

import "ML.proto";

message GetStateRequest {
  required int32 clientId = 1;
}

message GetStateResponse {
  required int32 state = 1;
}

message GetTokenRequest {
  required int32 clientId = 1;
  required int32 dataSize = 2;
}

message GetTokenResponse {
  required int32 token = 1;
}

service PSAgentPSService {
  rpc getState(GetStateRequest) returns (GetStateResponse);
  rpc getToken(GetTokenRequest) returns (GetTokenResponse);
}
